--- a/Assigment_15.ipynb
+++ b/Assigment_15.ipynb
@@ -17,7 +17,7 @@
     "- **Medicine kits (y)**\n",
     "- **Clean water (z)**\n",
     "\n",
-    "![site](https://github.com/vKhar/CodeChallenge/blob/main/Disaster_site.jpg?raw=true)\n",
+    "![site](https://github.com/vKhar/CodeChallenge/blob/main/Disaster_site.jpg?raw=true)",
     "\n",
     "---\n",
     "\n",
