--- a/Assigment_15.ipynb
+++ b/Assigment_15.ipynb
@@ -17,7 +17,7 @@
     "- **Medicine kits (y)**\n",
     "- **Clean water (z)**\n",
     "\n",
-    "![site](https://github.com/vKhar/CodeChallenge/blob/main/Disaster_site.jpg?raw=true)",
+    "![site](https://github.com/vKhar/CodeChallenge/blob/main/Disaster_site.jpg?raw=true)\n",
     "\n",
     "---\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "4414119f",
    "metadata": {},
    "outputs": [],
@@ -90,10 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6f7724dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Test Case 1 : 4 floors\n",
     "\n",
@@ -115,11 +126,120 @@
     "\n",
     "min_cost(floors)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "75411a09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution: choose starting floor minimizing sum of distances to nearest x, y, z\n",
+    "# Returns the floor index (tie-broken by lowest index). If any resource type\n",
+    "# is missing entirely, returns -1.\n",
+    "from math import inf, isinf\n",
+    "\n",
+    "def min_cost(floors):\n",
+    "    n = len(floors)\n",
+    "    if n == 0:\n",
+    "        return -1\n",
+    "\n",
+    "    # Unpack booleans for each resource type\n",
+    "    xs = [bool(x) for x, _, _ in floors]\n",
+    "    ys = [bool(y) for _, y, _ in floors]\n",
+    "    zs = [bool(z) for _, _, z in floors]\n",
+    "\n",
+    "    def nearest_dist(has):\n",
+    "        # Two-pass sweep to get distance to nearest True for each index\n",
+    "        dist = [inf] * n\n",
+    "        last = None\n",
+    "        for i in range(n):\n",
+    "            if has[i]:\n",
+    "                last = i\n",
+    "                dist[i] = 0\n",
+    "            elif last is not None:\n",
+    "                dist[i] = i - last\n",
+    "        last = None\n",
+    "        for i in range(n - 1, -1, -1):\n",
+    "            if has[i]:\n",
+    "                last = i\n",
+    "                dist[i] = 0\n",
+    "            elif last is not None:\n",
+    "                d = last - i\n",
+    "                if d < dist[i]:\n",
+    "                    dist[i] = d\n",
+    "        return dist\n",
+    "\n",
+    "    dx = nearest_dist(xs)\n",
+    "    dy = nearest_dist(ys)\n",
+    "    dz = nearest_dist(zs)\n",
+    "\n",
+    "    best_cost = inf\n",
+    "    best_floor = -1\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        if isinf(dx[i]) or isinf(dy[i]) or isinf(dz[i]):\n",
+    "            # Some resource not reachable from this floor (i.e., missing entirely)\n",
+    "            continue\n",
+    "        total = dx[i] + dy[i] + dz[i]\n",
+    "        # Tie-breaker: keep first (lowest index) on equal cost\n",
+    "        if total < best_cost:\n",
+    "            best_cost = total\n",
+    "            best_floor = i\n",
+    "\n",
+    "    return best_floor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "db3e7109",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1 (4 floors) -> 1\n",
+      "Test 2 (10 floors) -> 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Explicitly show outputs for both test cases\n",
+    "# Test 1: 4 floors\n",
+    "floors1 = [\n",
+    "    (False, False, True),  # 0\n",
+    "    (False, True, False),  # 1\n",
+    "    (True, False, False),  # 2\n",
+    "    (False, False, False)  # 3\n",
+    "]\n",
+    "res1 = min_cost(floors1)\n",
+    "print(\"Test 1 (4 floors) ->\", res1)\n",
+    "assert res1 == 1\n",
+    "\n",
+    "# Test 2: 10 floors\n",
+    "floors2 = [\n",
+    "    (False, False, False),\n",
+    "    (False, True, True),\n",
+    "    (False, False, False),\n",
+    "    (False, True, False),\n",
+    "    (False, False, False),\n",
+    "    (False, False, False),\n",
+    "    (False, False, True),\n",
+    "    (False, False, False),\n",
+    "    (True, False, False),\n",
+    "    (False, True, False)\n",
+    "]\n",
+    "res2 = min_cost(floors2)\n",
+    "print(\"Test 2 (10 floors) ->\", res2)\n",
+    "assert res2 == 8"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python12",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
