--- a/Assignment 13.ipynb
+++ b/Assignment 13.ipynb
@@ -16,7 +16,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Code here\n"
+    "## Code here\n",
+    "def lcm(a,b):\n",
+    "    if a > b:\n",
+    "        greater = a\n",
+    "    else:\n",
+    "        greater = b\n",
+    "\n",
+    "    while True:\n",
+    "        if greater % a == 0 and greater % b == 0:\n",
+    "            lcm = greater\n",
+    "            break\n",
+    "        greater += 1\n",
+    "\n",
+    "    return lcm\n"
    ]
   },
   {
@@ -48,23 +61,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d1ed3698",
+   "execution_count": 3,
+   "id": "7a0b9cb5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Code here\n",
     "def null_cipher(random_text):\n",
-    "    #Code here\n",
-    "    pass\n",
-    " \n"
+    "    vowels = 'aeiouAEIOU'\n",
+    "    message = ''\n",
+    "    i = 0\n",
+    "    \n",
+    "    while i < len(random_text) - 1:\n",
+    "        if random_text[i] in vowels:\n",
+    "            message += random_text[i + 1]\n",
+    "            i += 2  # Skip the character we just extracted\n",
+    "        else:\n",
+    "            i += 1\n",
+    "    \n",
+    "    return message\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a3b4d146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworld\n",
+      "codequest\n",
+      "lockheed\n"
+     ]
+    }
+   ],
    "source": [
     "## Test cases\n",
     "for random_text in (\"fksahnlgueyilfhnalfkjnhdssaokjfhndsfiwaourhnfdjgbalfkjshedfnsf\",\n",
@@ -108,18 +141,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "817a4d57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Code here"
+    "## Code here\n",
+    "def caesar_encrypt(message, shift):\n",
+    "    encrypted = ''\n",
+    "    \n",
+    "    for char in message:\n",
+    "        # Get the position of the character (A=0, B=1, ..., Z=25)\n",
+    "        char_position = ord(char) - ord('A')\n",
+    "        # Shift the position and wrap around using modulo\n",
+    "        new_position = (char_position + shift) % 26\n",
+    "        # Convert back to character\n",
+    "        encrypted_char = chr(new_position + ord('A'))\n",
+    "        encrypted += encrypted_char\n",
+    "    \n",
+    "    return encrypted\n",
+    "\n",
+    "\n",
+    "def caesar_decrypt(cipher_text, shift):\n",
+    "    decrypted = ''\n",
+    "    \n",
+    "    for char in cipher_text:\n",
+    "        # Get the position of the character (A=0, B=1, ..., Z=25)\n",
+    "        char_position = ord(char) - ord('A')\n",
+    "        # Shift backwards and wrap around using modulo\n",
+    "        new_position = (char_position - shift) % 26\n",
+    "        # Convert back to character\n",
+    "        decrypted_char = chr(new_position + ord('A'))\n",
+    "        decrypted += decrypted_char\n",
+    "    \n",
+    "    return decrypted\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0d15feb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original message: HELLO\n",
+      "Encrypted with shift 3: KHOOR\n",
+      "Decrypted back: HELLO\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "Original message: ATTACKATDAWN\n",
+      "Encrypted with shift 5: FYYFHPFYIFBS\n",
+      "Decrypted back: ATTACKATDAWN\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test cases\n",
+    "# Test encryption\n",
+    "message = \"HELLO\"\n",
+    "shift = 3\n",
+    "encrypted = caesar_encrypt(message, shift)\n",
+    "print(f\"Original message: {message}\")\n",
+    "print(f\"Encrypted with shift {shift}: {encrypted}\")\n",
+    "\n",
+    "# Test decryption\n",
+    "decrypted = caesar_decrypt(encrypted, shift)\n",
+    "print(f\"Decrypted back: {decrypted}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "\n",
+    "# Another test\n",
+    "message2 = \"ATTACKATDAWN\"\n",
+    "shift2 = 5\n",
+    "encrypted2 = caesar_encrypt(message2, shift2)\n",
+    "print(f\"Original message: {message2}\")\n",
+    "print(f\"Encrypted with shift {shift2}: {encrypted2}\")\n",
+    "decrypted2 = caesar_decrypt(encrypted2, shift2)\n",
+    "print(f\"Decrypted back: {decrypted2}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python12",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
