alternate encrypt/decrrypt

--- a/Assignment 13.ipynb
+++ b/Assignment 13.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7a0b9cb5",
    "metadata": {},
    "outputs": [],
@@ -84,20 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a3b4d146",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "helloworld\n",
-      "codequest\n",
-      "lockheed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Test cases\n",
     "for random_text in (\"fksahnlgueyilfhnalfkjnhdssaokjfhndsfiwaourhnfdjgbalfkjshedfnsf\",\n",
@@ -141,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "817a4d57",
    "metadata": {},
    "outputs": [],
@@ -179,26 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0d15feb7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original message: HELLO\n",
-      "Encrypted with shift 3: KHOOR\n",
-      "Decrypted back: HELLO\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "Original message: ATTACKATDAWN\n",
-      "Encrypted with shift 5: FYYFHPFYIFBS\n",
-      "Decrypted back: ATTACKATDAWN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Test cases\n",
     "# Test encryption\n",
@@ -222,6 +196,335 @@
     "print(f\"Encrypted with shift {shift2}: {encrypted2}\")\n",
     "decrypted2 = caesar_decrypt(encrypted2, shift2)\n",
     "print(f\"Decrypted back: {decrypted2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c276332",
+   "metadata": {},
+   "source": [
+    "## 13.4 Rail Fence Cipher\n",
+    "\n",
+    "### Problem Background\n",
+    "The Rail Fence cipher is another classical cipher technique that predates computer cryptography. Unlike the Caesar cipher which substitutes letters, the Rail Fence cipher is a **transposition cipher** - it rearranges the letters of the message without changing them. The name comes from the way the cipher is visualized: imagine writing your message in a zigzag pattern along imaginary \"rails\" of a fence, then reading off each rail in order.\n",
+    "\n",
+    "The cipher was used during the American Civil War by the Confederacy and has appeared in various forms throughout history. While simple, it effectively obscures messages from casual observation.\n",
+    "\n",
+    "### Problem Description\n",
+    "The Rail Fence cipher works by writing the message in a zigzag pattern across a specified number of rails (rows), then reading off each rail from top to bottom.\n",
+    "\n",
+    "For example, with **3 rails** and the message \"WEAREDISCOVEREDFLEEATONCE\":\n",
+    "\n",
+    "```\n",
+    "Rail 1:  W . . . E . . . C . . . R . . . L . . . T . . . E\n",
+    "Rail 2:  . E . R . D . S . O . E . E . F . E . A . O . C .\n",
+    "Rail 3:  . . A . . . I . . . V . . . D . . . E . . . N . .\n",
+    "```\n",
+    "\n",
+    "Reading row by row gives: **WECRLTEERDSOEEFEAOCAIVDEN**\n",
+    "\n",
+    "The decryption process reverses this: knowing the number of rails and the length of the ciphertext, you reconstruct the zigzag pattern and read the message following the zigzag path.\n",
+    "\n",
+    "### Task 1\n",
+    "Write a Python function `rail_fence_encrypt(message, num_rails)` where:\n",
+    "- `message` is the plaintext message (you can assume uppercase letters only, no spaces)\n",
+    "- `num_rails` is the number of rails to use (must be at least 2)\n",
+    "- The function returns the encrypted ciphertext\n",
+    "\n",
+    "### Task 2\n",
+    "Write a Python function `rail_fence_decrypt(cipher_text, num_rails)` where:\n",
+    "- `cipher_text` is the encrypted message\n",
+    "- `num_rails` is the number of rails used for encryption\n",
+    "- The function returns the decrypted plaintext message\n",
+    "\n",
+    "### Hint\n",
+    "For encryption:\n",
+    "- Create a list/array to represent each rail\n",
+    "- Track the current rail and direction (going down or up)\n",
+    "- Add each character to the appropriate rail\n",
+    "- Concatenate all rails to get the ciphertext\n",
+    "\n",
+    "For decryption:\n",
+    "- First, determine how many characters belong to each rail\n",
+    "- Fill in the rails with the ciphertext characters\n",
+    "- Read the message by following the zigzag pattern\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "7262b9ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hloolelwrd'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Task 1: \n",
+    "def rail_fence_encrypt(message, num_rails):\n",
+    "    rails = ['' for _ in range(num_rails)]\n",
+    "    rail = 0\n",
+    "    direction = 1  # 1 for down, -1 for up\n",
+    "\n",
+    "    for char in message:\n",
+    "        rails[rail] += char\n",
+    "        rail += direction\n",
+    "\n",
+    "        if rail == 0 or rail == num_rails - 1:\n",
+    "            direction *= -1  # Change direction\n",
+    "\n",
+    "    return ''.join(rails)\n",
+    "rail_fence_encrypt(\"helloworld\",2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "415de4d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Task 1:\n",
+    "#  Alternate\n",
+    "def rail_fence_encrypt(message, num_rails):\n",
+    "    rails = [ \"\" for _ in range(num_rails)]\n",
+    "    down = True\n",
+    "    rail_i = 0\n",
+    "    for char in message:\n",
+    "        if down:\n",
+    "            rails[rail_i] += char\n",
+    "            if rail_i < num_rails-1 :\n",
+    "                rail_i += 1\n",
+    "            else:\n",
+    "                down = not down\n",
+    "                rail_i = rail_i - 1\n",
+    "        else:\n",
+    "            rails[rail_i] += char\n",
+    "            if rail_i > 0:\n",
+    "                rail_i -= 1\n",
+    "            else:\n",
+    "                down = not down\n",
+    "                rail_i += 1\n",
+    "    return \"\".join(rails)\n",
+    "rail_fence_encrypt(\"helloworld\",2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18bfe9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test encryption\n",
+    "message = \"WEAREDISCOVEREDFLEEATONCE\"\n",
+    "num_rails = 3\n",
+    "encrypted = rail_fence_encrypt(message, num_rails)\n",
+    "print(f\"Original message: {message}\")\n",
+    "print(f\"Encrypted with {num_rails} rails: {encrypted}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b610cd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Task 2:\n",
+    "def rail_fence_decrypt(cipher_text, num_rails):\n",
+    "    rail_lengths = [0] * num_rails\n",
+    "    rail = 0\n",
+    "    direction = 1\n",
+    "\n",
+    "    # First, determine the length of each rail\n",
+    "    for char in cipher_text:\n",
+    "        rail_lengths[rail] += 1\n",
+    "        rail += direction\n",
+    "\n",
+    "        if rail == 0 or rail == num_rails - 1:\n",
+    "            direction *= -1\n",
+    "\n",
+    "    # Now, split the cipher_text into rails\n",
+    "    rails = []\n",
+    "    index = 0\n",
+    "    for length in rail_lengths:\n",
+    "        rails.append(cipher_text[index:index + length])\n",
+    "        index += length\n",
+    "\n",
+    "    # Now, read the rails in zig-zag order to reconstruct the message\n",
+    "    result = []\n",
+    "    rail_indices = [0] * num_rails\n",
+    "    rail = 0\n",
+    "    direction = 1\n",
+    "\n",
+    "    for _ in range(len(cipher_text)):\n",
+    "        result.append(rails[rail][rail_indices[rail]])\n",
+    "        rail_indices[rail] += 1\n",
+    "        rail += direction\n",
+    "\n",
+    "        if rail == 0 or rail == num_rails - 1:\n",
+    "            direction *= -1\n",
+    "\n",
+    "    return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "864a255a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Task 2: Alternate implementation\n",
+    "def rail_fence_decrypt(cipher_text, num_rails):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94e295dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Test cases\n",
+    "# Test decryption\n",
+    "decrypted = rail_fence_decrypt(encrypted, num_rails)\n",
+    "print(f\"Decrypted back: {decrypted}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c3c66cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Another test with different number of rails\n",
+    "message2 = \"helloworld\"\n",
+    "num_rails2 = 3\n",
+    "encrypted2 = rail_fence_encrypt(message2, num_rails2)\n",
+    "print(f\"Original message: {message2}\")\n",
+    "print(f\"Encrypted with {num_rails2} rails: {encrypted2}\")\n",
+    "decrypted2 = rail_fence_decrypt(encrypted2, num_rails2)\n",
+    "print(f\"Decrypted back: {decrypted2}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cf30167",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "#### Simplier implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ec518dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hlodeorlwl'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rail_encrypt(s, num_rails):\n",
+    "    rails = [ \"\" for _ in range(num_rails)]\n",
+    "\n",
+    "    for i in range(len(s)):\n",
+    "        rails[i%num_rails]+= s[i]\n",
+    "    return  \"\".join(rails)\n",
+    "rail_encrypt(\"helloworld\", 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c459dfb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hlodeor lwl '"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rail_encrypt(s, num_rails):\n",
+    "    # create slices of num_rails\n",
+    "    slices = []\n",
+    "    for i in range(0, len(s), num_rails):\n",
+    "        slice = s[i:i+num_rails]\n",
+    "        slice += \" \"*(num_rails-len(slice))\n",
+    "        slices.append(slice)\n",
+    "\n",
+    "    return \"\".join(\"\".join(t) for t in zip(*slices))\n",
+    "\n",
+    "rail_encrypt(\"helloworld\", 3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "4d2a21ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rail_decrypt(s, num_rails):\n",
+    "    rails = []\n",
+    "    slice = len(s)//num_rails\n",
+    "    for i in range(0,len(s), slice):\n",
+    "        rails.append(s[i:i+slice]) \n",
+    "    \n",
+    "    return \"\".join(\"\".join(t) for t in zip(*rails)).strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "379c37e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The quick brown fox'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rail_decrypt(\n",
+    "    rail_encrypt( \"The quick brown fox\", 3),\n",
+    "    3)"
    ]
   }
  ],
