simple rail cipher

--- a/Ciphers.ipynb
+++ b/Ciphers.ipynb
@@ -2,42 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4e2f77e",
-   "metadata": {},
-   "source": [
-    "## 13.1 LCM\n",
-    "In Mathematics, the lowest common multiple (LCM) of two integers `a` and` b`  is the smallest  positive integer that is a multiple of `a` and `b`. Write a function `lcm(a,b)` that computes the LCM of two positive numbers a, b. Your code should make use of List and For Loop to implement the solution. You do not need to use prime factorisation or GCD/HCF."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "498c1574",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Code here\n",
-    "def lcm(a,b):\n",
-    "    if a > b:\n",
-    "        greater = a\n",
-    "    else:\n",
-    "        greater = b\n",
-    "\n",
-    "    while True:\n",
-    "        if greater % a == 0 and greater % b == 0:\n",
-    "            lcm = greater\n",
-    "            break\n",
-    "        greater += 1\n",
-    "\n",
-    "    return lcm\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "09cc9e54",
    "metadata": {},
    "source": [
-    "## 13.2 Null Cipher\n",
+    "## 1 Null Cipher\n",
     "\n",
     "### Problem Background\n",
     "There are two primary methods to obscuring information you wish to keep hidden. Cryptography uses an algorithm or similar process to convert a message to another form, rendering it illegible. Steganography aims to simply hide a message so that a would-be eavesdropper doesn't realize a message actually exists in the first place. Steganography has taken a wide range of forms throughout history: messages written in invisible ink, patterns representing Morse Code knitted into sweaters, and messages shrunk to microscopic size and printed on transparent film have all been used throughout history. One of the simplest forms of steganography known as the \"null cipher\"\n",
@@ -101,7 +69,7 @@
    "id": "e10af341",
    "metadata": {},
    "source": [
-    "## 13.3 Caesar cipher. \n",
+    "## 2 Caesar cipher. \n",
     " \n",
     "The goal of this exercise is to write a cyclic cipher to encrypt messages. This type of cipher was used by Julius Caesar to communicate with his generals. It is very simple to generate but it can actually be easily broken and does not provide the security one would hope for. \n",
     " \n",
@@ -203,7 +171,7 @@
    "id": "0c276332",
    "metadata": {},
    "source": [
-    "## 13.4 Rail Fence Cipher\n",
+    "## 3 Rail Fence Cipher\n",
     "\n",
     "### Problem Background\n",
     "The Rail Fence cipher is another classical cipher technique that predates computer cryptography. Unlike the Caesar cipher which substitutes letters, the Rail Fence cipher is a **transposition cipher** - it rearranges the letters of the message without changing them. The name comes from the way the cipher is visualized: imagine writing your message in a zigzag pattern along imaginary \"rails\" of a fence, then reading off each rail in order.\n",
@@ -252,21 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "7262b9ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hloolelwrd'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Task 1: \n",
     "def rail_fence_encrypt(message, num_rails):\n",
@@ -380,18 +337,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "864a255a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Task 2: Alternate implementation\n",
-    "def rail_fence_decrypt(cipher_text, num_rails):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "94e295dc",
    "metadata": {},
    "outputs": [],
@@ -427,7 +372,7 @@
    "metadata": {},
    "source": [
     "----\n",
-    "#### Simplier implementation"
+    "#### Alternate implementation"
    ]
   },
   {
@@ -435,18 +380,7 @@
    "execution_count": null,
    "id": "9ec518dc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hlodeorlwl'"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def rail_encrypt(s, num_rails):\n",
     "    rails = [ \"\" for _ in range(num_rails)]\n",
@@ -460,71 +394,197 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c459dfb9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hlodeor lwl '"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def rail_encrypt(s, num_rails):\n",
-    "    # create slices of num_rails\n",
-    "    slices = []\n",
-    "    for i in range(0, len(s), num_rails):\n",
-    "        slice = s[i:i+num_rails]\n",
-    "        slice += \" \"*(num_rails-len(slice))\n",
-    "        slices.append(slice)\n",
-    "\n",
-    "    return \"\".join(\"\".join(t) for t in zip(*slices))\n",
-    "\n",
-    "rail_encrypt(\"helloworld\", 3)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
    "id": "4d2a21ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "def rail_decrypt(s, num_rails):\n",
-    "    rails = []\n",
-    "    slice = len(s)//num_rails\n",
-    "    for i in range(0,len(s), slice):\n",
-    "        rails.append(s[i:i+slice]) \n",
-    "    \n",
-    "    return \"\".join(\"\".join(t) for t in zip(*rails)).strip()"
+    "    ## put the cipher text into its corresponding rail\n",
+    "\n",
+    "    #find the length of each rail\n",
+    "    # min for each rail\n",
+    "    rail_lengths = [ len(s)//num_rails for _ in range(num_rails)]\n",
+    "    # add remainder to the \n",
+    "    for i in range(len(s)%num_rails):\n",
+    "        rail_lengths[i] += 1\n",
+    "\n",
+    "    ## split the cipher text into its rails\n",
+    "    slices = []\n",
+    "    i = 0\n",
+    "    for slice_len in rail_lengths:\n",
+    "        slices.append(list(s[i:i+slice_len]))\n",
+    "        i += slice_len\n",
+    "\n",
+    "    ## reconstruct the plain text by going through the rails in order\n",
+    "    txt = ''\n",
+    "    for i in range(len(s)):\n",
+    "        rail_idx = i % num_rails\n",
+    "        txt += slices[rail_idx].pop(0)\n",
+    "    return txt\n",
+    "rail_decrypt('hlodeorlwl',3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "379c37e9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The quick brown fox'"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rail_decrypt(\n",
     "    rail_encrypt( \"The quick brown fox\", 3),\n",
     "    3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0f3f03a",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Rail Cipher Problem (No Zig Zag and up/down)\n",
+    "\n",
+    "### Problem Background\n",
+    "\n",
+    "The Rail Cipher is a transposition cipher that arranges the characters of a message into multiple rails (rows) in a repeating pattern. Each character is placed in the next rail in a cyclical manner, starting again from the first rail after reaching the last. The encrypted text is produced by reading the rails sequentially.\n",
+    "\n",
+    "### Problem Description\n",
+    "\n",
+    "#### Encryption\n",
+    "Given a message and a specified number of rails, write the message by placing each character in the next rail, cycling through all rails. After all characters are placed, concatenate the contents of each rail to form the encrypted message.\n",
+    "\n",
+    "For example, with 3 rails and the message \"HELLOWORLD\":\n",
+    "\n",
+    "```\n",
+    "Rail 1: H   L   O   D\n",
+    "Rail 2: E   O   R\n",
+    "Rail 3: L   W   L\n",
+    "```\n",
+    "\n",
+    "Reading each rail in order gives the ciphertext: **HLODEORLWL**\n",
+    "\n",
+    "#### Decryption\n",
+    "Given the encrypted message and the number of rails, determine how many characters belong to each rail by dividing the message length by the number of rails. The first (length % num_rails) rails each receive one extra character. Split the ciphertext accordingly to recover each rail, then reconstruct the original message by taking one character from each rail in order, cycling through the rails until complete.\n",
+    "\n",
+    "### Tasks\n",
+    "- **Task 1:** Implement a function `rail_encrypt(s, num_rails)` that encrypts a message using this rail cipher method.\n",
+    "- **Task 2:** Implement a function `rail_decrypt(s, num_rails)` that decrypts a message encrypted with this method.\n",
+    "\n",
+    "Use the provided code cells for your implementation and testing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1d37c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution for Task 1: Encryption\n",
+    "def rail_encrypt(s, num_rails):\n",
+    "    rails = [\"\" for _ in range(num_rails)]\n",
+    "    for i, char in enumerate(s):\n",
+    "        rails[i % num_rails] += char\n",
+    "    return \"\".join(rails)\n",
+    "\n",
+    "# Solution for Task 2: Decryption\n",
+    "def rail_decrypt(s, num_rails):\n",
+    "    # Calculate the length of each rail\n",
+    "    rail_lengths = [len(s) // num_rails] * num_rails\n",
+    "    for i in range(len(s) % num_rails):\n",
+    "        rail_lengths[i] += 1\n",
+    "    # Split the ciphertext into rails\n",
+    "    rails = []\n",
+    "    idx = 0\n",
+    "    for length in rail_lengths:\n",
+    "        rails.append(s[idx:idx+length])\n",
+    "        idx += length\n",
+    "    # Reconstruct the original message\n",
+    "    result = []\n",
+    "    rail_indices = [0] * num_rails\n",
+    "    for i in range(len(s)):\n",
+    "        rail = i % num_rails\n",
+    "        result.append(rails[rail][rail_indices[rail]])\n",
+    "        rail_indices[rail] += 1\n",
+    "    return \"\".join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cceda10e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rail_encrypt(\"helloworld\",3)\n",
+    "rail_decrypt('hlodeorlwl',3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8250f64",
+   "metadata": {},
+   "source": [
+    "### Exercise 1: Alphabet indexing\n",
+    "\n",
+    "Create a list containing all uppercase English letters in order. Then, using only list operations (no dictionaries), write the index positions (0-based) of the letters H, E, L, O for the word HELLO. Do not write code to print the word; just produce the indices.\n",
+    "\n",
+    "Example expected output format (conceptually):\n",
+    "- Alphabet list length: 26\n",
+    "- Indices for H, E, L, O: [?, ?, ?, ?]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bfae809",
+   "metadata": {},
+   "source": [
+    "### Exercise 2: Vowel-follow list\n",
+    "\n",
+    "Given a string of lowercase letters, build a list containing the characters that immediately follow each vowel (a, e, i, o, u) in the string. If a vowel is the last character, it contributes nothing. Your result should be a list of those following characters, in order of appearance.\n",
+    "\n",
+    "Example input idea: fksahnlgueyilfhnal...\n",
+    "Expected: a list (not a single string) of characters that followed vowels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90266bd1",
+   "metadata": {},
+   "source": [
+    "### Exercise 3: Cyclic letter shift (list-based)\n",
+    "\n",
+    "You are given a list of uppercase letters representing a message (e.g., ['H','E','L','L','O']). Create a new list where each letter is shifted forward by k positions in the alphabet (0-based), wrapping around from Z to A. Do not join into a string—return a list of shifted letters.\n",
+    "\n",
+    "Constraints:\n",
+    "- Assume k is a non-negative integer\n",
+    "- Input contains only A–Z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d42e99b0",
+   "metadata": {},
+   "source": [
+    "### Exercise 4: Cyclic distribution into k groups\n",
+    "\n",
+    "Distribute the characters of a message string across k groups in a cyclic fashion: character at index 0 to group 0, index 1 to group 1, …, index k-1 to group k-1, then wrap back to group 0, and so on. Produce a list of lists (groups) containing the characters in each group.\n",
+    "\n",
+    "Edge cases:\n",
+    "- If the message length is not a multiple of k, some groups will contain one extra character. Your structure should reflect the actual distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86016fc6",
+   "metadata": {},
+   "source": [
+    "### Exercise 5: Column-wise read (transpose-like)\n",
+    "\n",
+    "You are given a message string and an integer `n`. Split the message into consecutive slices (rows) of length `n` (the last slice may be shorter). Build a column-wise read by taking the first character of each slice (top to bottom), then the second character of each slice, and so on, skipping positions that don't exist in shorter slices. Produce the resulting sequence as a list of characters.\n",
+    "\n",
+    "Hint:\n",
+    "- Think about how to safely access a column index in each row without errors."
    ]
   }
  ],
