--- a/Ciphers.ipynb
+++ b/Ciphers.ipynb
@@ -442,7 +442,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Rail Cipher Problem (No Zig Zag and up/down)\n",
+    "## 4 Simple Rail Fence Cipher Problem\n",
     "\n",
     "### Problem Background\n",
     "\n",
