--- a/Assignment 14.ipynb
+++ b/Assignment 14.ipynb
@@ -274,7 +274,7 @@
    "id": "53bc98a8",
    "metadata": {},
    "source": [
-    "## Question 4 Find The Units Digit\n",
+    "# Question 4 Find The Units Digit\n",
     "Let $n$ be an integer. The **product value** of $n$ is defined to be the product of all digits of $n$ where the $0$ digits in $n$ is replaced with $1$. For example, the product values of \n",
     "- $50$, $500$ are both $5$,\n",
     "- $320$, $16$ are both $6$.\n",
@@ -339,11 +339,144 @@
    "source": [
     "## YOUR CODE HERE"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4092999",
+   "metadata": {},
+   "source": [
+    "# Question 5 Number Analyzer\n",
+    "\n",
+    "Maya is creating a program to analyze numbers for her math class. She wants to create a function that takes a positive integer and provides different information about it based on its characteristics.\n",
+    "\n",
+    "Place value reminder:\n",
+    "- The ones digit is the rightmost digit.\n",
+    "- The tens digit is immediately to the left of the ones digit.\n",
+    "- The hundreds digit is immediately to the left of the tens digit, and so on.\n",
+    "  For example, in 237: hundreds = 2, tens = 3, ones = 7.\n",
+    "\n",
+    "Input validation:\n",
+    "- The input must be a positive integer. If it is not, print a clear message (for example: \"Invalid input: please enter a positive integer\") and stop.\n",
+    "\n",
+    "The program should work as follows:\n",
+    "\n",
+    "**If the number is less than 10:**\n",
+    "- Print \"Single digit\"\n",
+    "- Print the ones digit (which is the number itself)\n",
+    "\n",
+    "**If the number is between 10 and 99 (inclusive):**\n",
+    "- Print \"Double digit\"\n",
+    "- Compute and print the result of dividing the ones digit by the tens digit using integer division\n",
+    "- Compute and print the remainder when the ones digit is divided by the tens digit\n",
+    "\n",
+    "**If the number is between 100 and 999 (inclusive):**\n",
+    "- Print \"Three-digit number\"\n",
+    "- Calculate and print the sum of all digits in the number\n",
+    "- Round the number to 1 significant figure and print the result (nearest hundred)\n",
+    "- Round the number to 2 significant figures and print the result (nearest ten)\n",
+    "\n",
+    "**If the number is 1000 or greater:**\n",
+    "- Print \"Four or more digits\"\n",
+    "- Calculate and print the sum of all digits in the number\n",
+    "- Calculate and print how many digits the number has\n",
+    "\n",
+    "Guidance: Rounding to significant figures\n",
+    "- Find the first non-zero digit by scanning from left to right (from the most significant digit).\n",
+    "- To round to 1 significant figure: keep only the first digit; look at the next digit to decide whether to round up (5–9) or stay (0–4); replace all later digits with zeros.\n",
+    "- To round to 2 significant figures: keep the first two digits; look at the third digit to decide whether to round up or stay; replace the remaining digits with zeros.\n",
+    "- For three-digit numbers, 1 significant figure is the nearest hundred; 2 significant figures is the nearest ten.\n",
+    "- For this question, numbers with four or more digits do not require rounding; just report the sum of digits and the number of digits.\n",
+    "\n",
+    "For example:\n",
+    "- Input: `7` should output:\n",
+    "  ```\n",
+    "  Single digit\n",
+    "  7\n",
+    "  ```\n",
+    "- Input: `45` should output:\n",
+    "  ```\n",
+    "  Double digit\n",
+    "  1\n",
+    "  1\n",
+    "  ```\n",
+    "  (Because ones = 5 and tens = 4; 5 divided by 4 is 1 with remainder 1)\n",
+    "  \n",
+    "- Input: `237` should output:\n",
+    "  ```\n",
+    "  Three-digit number\n",
+    "  12\n",
+    "  200\n",
+    "  240\n",
+    "  ```\n",
+    "  (Because 2+3+7 = 12; to 1 significant figure 237 rounds to 200; to 2 significant figures 237 rounds to 240)\n",
+    "\n",
+    "- Input: `7654` should output:\n",
+    "  ```\n",
+    "  Four or more digits\n",
+    "  22\n",
+    "  4\n",
+    "  ```\n",
+    "  (Because 7+6+5+4 = 22; the number has 4 digits)\n",
+    "\n",
+    "## Task 1\n",
+    "Write a function `number_analyzer()` that:\n",
+    "- takes in a value `num`\n",
+    "- validates that `num` is a positive integer; if not, prints a clear message and stops\n",
+    "- implements the logic described above\n",
+    "- prints the appropriate output based on the number's characteristics\n",
+    "\n",
+    "<div style=\"text-align: right\">[3]</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3bfca283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c35ccf7",
+   "metadata": {},
+   "source": [
+    "## Task 2\n",
+    "Test your function with the following values: `7`, `45`, and `237`.\n",
+    "\n",
+    "<div style=\"text-align: right\">[1]</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9205b3b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE HERE"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
